--- a/public/html/ibm-3370.html
+++ b/public/html/ibm-3370.html
@@ -12,10 +12,10 @@
       <body>
         <div id="slide-container">
           <div class="slide-content">
-            <div class="header"></div>
+            <div class="header"><h1>IBM 3370 Direct Access Storage Devices</h1></div>
             <div class="body">
-              <div class="text"></div>
-              <div class="image"></div>
+              <div class="text"><p>H IBM εισήγαγε την σειρά IBM 3370 συσκευών αποθήκευσης άμεσης προσπέλασης τον Ιανουάριο του 1979 για τους υπολογιστές IBM 4331, 4341, και System/38 μέσης κλίμακας (midrange). Κάθε μονάδα έχει επτά (7) σταθερούς δίσκους των 14 ιντσών (360 mm), για συνολική χωρητικότητα 571 MB. <strong>Ήταν ο πρώτος σκληρός δίσκος που χρησιμοποίησε τεχνολογία λεπτού φιλμ (thin-film) για τις κεφαλές του</strong>. Έρευνα σε αυτή την τεχνολογία ξεκίνησε στο ερευνητικό κέντρο Thomas J. Watson της ΙΒΜ στα τέλη της δεκαετίας του 1960. Το 3370 ήταν μια <strong>συσκευή σταθερού μεγέθους σελίδας</strong> (block) που χρησιμοποιήθηκε στα λειτουργικά συστήματα και περιβάλλοντα του S/370 DOS/VSE και VM, τα μόνα λειτουργικά συστήματα που υποστήριζαν συσκευές σταθερού μεγέθους σελίδας (fixed block size, FBA).</p></div>
+              <div class="image"><img src="../assets/images/ibm-3370-disks-a.jpg" alt="IBM 3370 Direct Access Storage Devices"></div>
             </div>
           </div>
         </div>
